[package]
name = "reqwest-spotify"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
base64.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
